Added File Upload, Greeting Card, User Session Storage, and fixed bug with dates on calander

--- a/app.json
+++ b/app.json
@@ -32,6 +32,12 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to identify foods to be logged."
+        }
       ]
     ],
     "experiments": {
